--- a/src/components/common/PostalCode/postal-code-input.scss
+++ b/src/components/common/PostalCode/postal-code-input.scss
@@ -1,18 +1,10 @@
 .postal-code-input {
-  // Lighthouse
-  margin-top: 1rem;
-
-  [data-store-label] {
-    font-family: Arial; /* stylelint-disable-line */ // Prevent layout shift
-  }
-
   [data-store-input] {
-    border: var(--border-width-0) solid var(--color-border-input);
-    border-radius: var(--border-radius-default);
 
     // Lighthouse
-    height: var(--tap-min-size); /* stylelint-disable-line */
+    height: var(--tap-min-size);
     margin-left: 1rem;
-    font-family: Arial; /* stylelint-disable-line */ // prevent layout shift
+    border: var(--border-width-0) solid var(--color-border-input);
+    border-radius: var(--border-radius-default);
   }
 }
